<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResultatPartida">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_resultat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="Resultats partida"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Large"
        app:titleTextColor="#000000" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DiaHoraText" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/diaihora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Log" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/valorslog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="8dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/DestEmail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/emaildst"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <Button
            android:id="@+id/enviarmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EnvEmail" />

        <Button
            android:id="@+id/novapartida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NovaPartida" />

        <Button
            android:id="@+id/sortir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btSortir" />
    </LinearLayout>

</LinearLayout>